--- a/visr-test-helm/values.yaml
+++ b/visr-test-helm/values.yaml
@@ -8,7 +8,7 @@ webapp:
     fqdn: visr-test.k8s.ucar.edu
     secretName: incommon-cert-visr-test
   container: 
-    image: https://hub.docker.com/repository/docker/mattrncar/actix-docker-image
+    image: http://docker.io/mattrncar/actix-docker-image:v1
     port: 8080
     memory: 1G
     cpu: 2
