Added backend with test client

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,16 @@
+##TEST Frontend
+FROM node:20 AS frontend
+WORKDIR /client
+COPY client/ .
+RUN npm install && npm run build
+
+
+# Backend
 FROM python:3.11-slim
 WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
+COPY --from=frontend /client/dist ./client/dist
 # CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
 CMD ["gunicorn", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "main:app", "--bind", "0.0.0.0:8000"]
